--- a/man/rmd/proportional_hazards_survival.Rmd
+++ b/man/rmd/proportional_hazards_survival.Rmd
@@ -42,12 +42,12 @@ proportional_hazards() %>%
 
 Note that columns used in the `strata()` function will not be estimated in the regular portion of the model (i.e., within the linear predictor).
 
+Predictions of type `"time"` are predictions of the mean survival time.
 
-# Linear predictor values
+## Linear predictor values
 
 ```{r child = "template-censored-linear-predictor.Rmd"}
 ```
-
 
 ## Case weights
 
