--- a/man/rmd/bag_tree_rpart.Rmd
+++ b/man/rmd/bag_tree_rpart.Rmd
@@ -77,6 +77,10 @@ bag_tree(tree_depth = integer(1), min_n = integer(1), cost_complexity = double(1
 ```{r child = "template-uses-case-weights.Rmd"}
 ```
 
+## Other details
+
+For the censored regression mode, predictions of type `"time"` are predictions of the median survival time.
+
 ## References
 
  - Breiman L. 1996. "Bagging predictors". Machine Learning. 24 (2): 123-140
