--- a/man/rmd/decision_tree_partykit.Rmd
+++ b/man/rmd/decision_tree_partykit.Rmd
@@ -78,6 +78,10 @@ decision_tree(tree_depth = integer(1), min_n = integer(1)) %>%
 ```{r child = "template-tree-split-factors.Rmd"}
 ```
 
+## Other details
+
+For the censored regression mode, predictions of type `"time"` are predictions of the median survival time.
+
 ## References
 
  - [partykit: A Modular Toolkit for Recursive Partytioning in R](https://jmlr.org/papers/v16/hothorn15a.html)
