--- a/man/rmd/proportional_hazards_glmnet.Rmd
+++ b/man/rmd/proportional_hazards_glmnet.Rmd
@@ -86,7 +86,10 @@ predict(mod, pred_data, type = "survival", time = 500) %>%
 
 Note that columns used in the `strata()` function _will_ also be estimated in the regular portion of the model (i.e., within the linear predictor).
 
-# Linear predictor values
+Predictions of type `"time"` are predictions of the mean survival time.
+
+## Linear predictor values
+
 ```{r child = "template-censored-linear-predictor.Rmd"}
 ```
 
