--- a/man/rmd/boost_tree_mboost.Rmd
+++ b/man/rmd/boost_tree_mboost.Rmd
@@ -47,7 +47,8 @@ boost_tree() %>%
 
 ## Other details
 
-For the censored regression mode, predictions of type `"time"` are predictions of the mean survival time.
+```{r child = "template-survival-mean.Rmd"}
+```
 
 ## References
 
