--- a/man/rmd/decision_tree_partykit.Rmd
+++ b/man/rmd/decision_tree_partykit.Rmd
@@ -80,7 +80,8 @@ decision_tree(tree_depth = integer(1), min_n = integer(1)) %>%
 
 ## Other details
 
-For the censored regression mode, predictions of type `"time"` are predictions of the median survival time.
+```{r child = "template-survival-median.Rmd"}
+```
 
 ## References
 
