--- a/man/rmd/proportional_hazards_survival.Rmd
+++ b/man/rmd/proportional_hazards_survival.Rmd
@@ -42,7 +42,8 @@ proportional_hazards() %>%
 
 Note that columns used in the `strata()` function will not be estimated in the regular portion of the model (i.e., within the linear predictor).
 
-Predictions of type `"time"` are predictions of the mean survival time.
+```{r child = "template-survival-mean.Rmd"}
+```
 
 ## Linear predictor values
 
