--- a/man/rmd/survival_reg_flexsurv.Rmd
+++ b/man/rmd/survival_reg_flexsurv.Rmd
@@ -42,7 +42,8 @@ The main interface for this model uses the formula method since the model specif
 
 For this engine, stratification cannot be specified via [`strata()`], please see [flexsurv::flexsurvreg()] for alternative specifications.
 
-Predictions of type `"time"` are predictions of the mean survival time.
+```{r child = "template-survival-mean.Rmd"}
+```
 
 ## References
 
