--- a/man/rmd/survival_reg_survival.Rmd
+++ b/man/rmd/survival_reg_survival.Rmd
@@ -54,7 +54,8 @@ survival_reg() %>%
   extract_fit_engine()
 ```
 
-Predictions of type `"time"` are predictions of the mean survival time.
+```{r child = "template-survival-mean.Rmd"}
+```
 
 ## Case weights
 
