--- a/man/rmd/decision_tree_rpart.Rmd
+++ b/man/rmd/decision_tree_rpart.Rmd
@@ -70,6 +70,11 @@ decision_tree(
 ```{r child = "template-uses-case-weights.Rmd"}
 ```
 
+## Other details
+
+```{r child = "template-survival-mean.Rmd"}
+```
+
 ## Examples 
 
 The "Fitting and Predicting with parsnip" article contains [examples](https://parsnip.tidymodels.org/articles/articles/Examples.html#decision-tree-rpart) for `decision_tree()` with the `"rpart"` engine.
