--- a/man/rmd/survival_reg_flexsurv.Rmd
+++ b/man/rmd/survival_reg_flexsurv.Rmd
@@ -42,6 +42,9 @@ The main interface for this model uses the formula method since the model specif
 
 For this engine, stratification cannot be specified via [`strata()`], please see [flexsurv::flexsurvreg()] for alternative specifications.
 
+```{r child = "template-survival-mean.Rmd"}
+```
+
 ## References
 
 - Jackson, C. 2016. `flexsurv`: A Platform for Parametric Survival  Modeling in R. _Journal of Statistical Software_, 70(8), 1 - 33.
