remove unicode characters in docs

--- a/man/rmd/linear_reg_stan_glmer.Rmd
+++ b/man/rmd/linear_reg_stan_glmer.Rmd
@@ -33,7 +33,7 @@ linear_reg() %>%
   translate()
 ```
 
-```{r child = "no-pooling.Rmd"}
+```{r child = "template-no-pooling.Rmd"}
 ```
 
 ## Preprocessing requirements
