--- a/man/rmd/logistic_reg_glmer.Rmd
+++ b/man/rmd/logistic_reg_glmer.Rmd
@@ -19,7 +19,7 @@ logistic_reg() %>%
   translate()
 ```
 
-```{r child = "no-pooling.Rmd"}
+```{r child = "template-no-pooling.Rmd"}
 ```
 
 ## Preprocessing requirements
