--- a/man/rmd/logistic_reg_stan_glmer.Rmd
+++ b/man/rmd/logistic_reg_stan_glmer.Rmd
@@ -32,7 +32,7 @@ logistic_reg() %>%
   translate()
 ```
 
-```{r child = "no-pooling.Rmd"}
+```{r child = "template-no-pooling.Rmd"}
 ```
 
 ## Preprocessing requirements
