--- a/man/rmd/linear_reg_lme.Rmd
+++ b/man/rmd/linear_reg_lme.Rmd
@@ -20,7 +20,7 @@ linear_reg() %>%
   translate()
 ```
 
-```{r child = "no-pooling.Rmd"}
+```{r child = "template-no-pooling.Rmd"}
 ```
 
 ## Preprocessing requirements
