--- a/man/rmd/poisson_reg_stan_glmer.Rmd
+++ b/man/rmd/poisson_reg_stan_glmer.Rmd
@@ -32,7 +32,7 @@ poisson_reg(engine = "stan_glmer") %>%
   translate()
 ```
 
-```{r child = "no-pooling.Rmd"}
+```{r child = "template-no-pooling.Rmd"}
 ```
 
 ## Preprocessing requirements
