--- a/man/rmd/poisson_reg_zeroinfl.Rmd
+++ b/man/rmd/poisson_reg_zeroinfl.Rmd
@@ -24,6 +24,8 @@ poisson_reg() %>%
 ```{r child = "template-makes-dummies.Rmd"}
 ```
 
+## Specifying the statistical model details
+
 For this particular model, a special formula is used to specify which columns affect the counts and which affect the model for the probability of zero counts. These sets of terms are separated by a bar. For example, `y ~ x | z`. This type of formula is not used by the base R infrastructure (e.g. `model.matrix()`)
 
 When fitting a parsnip model with this engine directly, the formula method is required and the formula is just passed through. For example:
@@ -53,7 +55,8 @@ spec <-
 workflow() %>% 
   add_variables(outcomes = c(art), predictors = c(fem, mar, ment)) %>% 
   add_model(spec, formula = art ~ fem + mar | ment) %>% 
-  fit(data = bioChemists)
+  fit(data = bioChemists) %>% 
+  extract_fit_engine()
 ```
 
 The reason for this is that [workflows::add_formula()] will try to create the model matrix and either fail or create dummy variables prematurely. 
