fix broken bits caused by pillar 1.8.0

--- a/man/rmd/aaa.Rmd
+++ b/man/rmd/aaa.Rmd
@@ -1,5 +1,12 @@
 ```{r, include = FALSE}
+# pillar/cli options to try to lock down formatting
+options(dplyr.print_min = 6, dplyr.print_max = 6)
+options(cli.width = 85)
+options(crayon.enabled = FALSE)
+options(pillar.min_title_chars = Inf)
+
 library(parsnip)
+library(workflows)
 
 # ------------------------------------------------------------------------------
 # These are required to build md docs for parsnip and extensions
