add reference to bundle in docs

--- a/man/rmd/boost_tree_h2o.Rmd
+++ b/man/rmd/boost_tree_h2o.Rmd
@@ -75,3 +75,8 @@ Non-numeric predictors (i.e., factors) are internally converted to numeric. In t
 
 ```{r child = "template-h2o-init.Rmd"}
 ```
+
+## Saving model fits
+
+```{r child = "template-bundle.Rmd"}
+```
