--- a/man/rmd/mlp_h2o.Rmd
+++ b/man/rmd/mlp_h2o.Rmd
@@ -86,3 +86,7 @@ By default, [h2o::h2o.deeplearning()] uses the argument `standardize = TRUE` to 
 ```{r child = "template-h2o-init.Rmd"}
 ```
 
+## Saving model fits
+
+```{r child = "template-bundle.Rmd"}
+```
