--- a/man/rmd/multinom_reg_keras.Rmd
+++ b/man/rmd/multinom_reg_keras.Rmd
@@ -47,6 +47,11 @@ multinom_reg(penalty = double(1)) %>%
 ```{r child = "template-no-case-weights.Rmd"}
 ```
 
+## Saving model fits
+
+```{r child = "template-bundle.Rmd"}
+```
+
 ## Examples 
 
 The "Fitting and Predicting with parsnip" article contains [examples](https://parsnip.tidymodels.org/articles/articles/Examples.html#multinom-reg-keras) for `multinom_reg()` with the `"keras"` engine.
