--- a/man/rmd/poisson_reg_h2o.Rmd
+++ b/man/rmd/poisson_reg_h2o.Rmd
@@ -54,3 +54,8 @@ By default, `h2o::h2o.glm()` uses the argument `standardize = TRUE` to center an
 
 ```{r child = "template-h2o-init.Rmd"}
 ```
+
+## Saving model fits
+
+```{r child = "template-bundle.Rmd"}
+```
