slight change to heading text

--- a/man/rmd/auto_ml_h2o.Rmd
+++ b/man/rmd/auto_ml_h2o.Rmd
@@ -46,7 +46,7 @@ auto_ml() %>%
 ```{r child = "template-h2o-init.Rmd"}
 ```
 
-## Saving model fits
+## Saving fitted model objects
 
 ```{r child = "template-bundle.Rmd"}
 ```
