--- a/man/rmd/naive_Bayes_h2o.Rmd
+++ b/man/rmd/naive_Bayes_h2o.Rmd
@@ -51,7 +51,7 @@ naive_Bayes(Laplace = numeric(0)) %>%
 ```{r child = "template-h2o-init.Rmd"}
 ```
 
-## Saving model fits
+## Saving fitted model objects
 
 ```{r child = "template-bundle.Rmd"}
 ```
