--- a/man/rmd/rand_forest_h2o.Rmd
+++ b/man/rmd/rand_forest_h2o.Rmd
@@ -65,7 +65,7 @@ rand_forest(
 ```{r child = "template-h2o-init.Rmd"}
 ```
 
-## Saving model fits
+## Saving fitted model objects
 
 ```{r child = "template-bundle.Rmd"}
 ```
