--- a/man/rmd/rule_fit_h2o.Rmd
+++ b/man/rmd/rule_fit_h2o.Rmd
@@ -83,7 +83,7 @@ rule_fit(
 ```{r child = "template-h2o-init.Rmd"}
 ```
 
-## Saving model fits
+## Saving fitted model objects
 
 ```{r child = "template-bundle.Rmd"}
 ```
