notes of using the earth package with case weights

--- a/man/rmd/bag_mars_earth.Rmd
+++ b/man/rmd/bag_mars_earth.Rmd
@@ -62,6 +62,8 @@ bag_mars(
 ```{r child = "template-uses-case-weights.Rmd"}
 ```
 
+Note that the `earth` package documentation has: "In the current implementation, _building models with weights can be slow_."
+
 ## References
 
  - Breiman, L. 1996. "Bagging predictors". Machine Learning. 24 (2): 123-140
