woopsies, edit the `.Rmd` source and generate `.md` from there

--- a/man/rmd/rand_forest_aorsf.Rmd
+++ b/man/rmd/rand_forest_aorsf.Rmd
@@ -26,10 +26,9 @@ param$item
 
 Additionally, this model has one engine-specific tuning parameter:
 
- * `split_min_stat`: Minimum test statistic required to split a node. Default is `3.841459` for the log-rank test, which is roughly a p-value of 0.05.
+ * `split_min_stat`: Minimum test statistic required to split a node. Defaults are `3.841459` for censored regression (which is roughly a p-value of 0.05) and `0` for classification and regression. For classification, this tuning parameter should be between 0 and 1, and for regression it should be greater than or equal to 0. Higher values of this parameter cause trees grown by `aorsf` to have less depth.
 
-
-# Translation from parsnip to the original package (censored regression)
+## Translation from parsnip to the original package (censored regression)
 
 `r uses_extension("rand_forest", "aorsf", "censored regression")`
 
@@ -39,6 +38,32 @@ library(censored)
 rand_forest() %>%
   set_engine("aorsf") %>%
   set_mode("censored regression") %>%
+  translate()
+```
+
+## Translation from parsnip to the original package (regression)
+
+`r uses_extension("rand_forest", "aorsf", "regression")`
+
+```{r aorsf-reg}
+library(bonsai)
+
+rand_forest() %>%
+  set_engine("aorsf") %>%
+  set_mode("regression") %>%
+  translate()
+```
+
+## Translation from parsnip to the original package (classification)
+
+`r uses_extension("rand_forest", "aorsf", "classification")`
+
+```{r aorsf-class}
+library(bonsai)
+
+rand_forest() %>%
+  set_engine("aorsf") %>%
+  set_mode("classification") %>%
   translate()
 ```
 
@@ -55,6 +80,8 @@ rand_forest() %>%
 ## Other details
 
 Predictions of survival probability at a time exceeding the maximum observed event time are the predicted survival probability at the maximum observed time in the training data.
+
+The class predict method in `aorsf` uses the standard 'each tree gets one vote' approach, which is usually but not always consistent with the picking the class that has highest predicted probability. It is okay for this inconsistency to occur in `aorsf` because it is intentionally applying the traditional class prediction method for random forests, but in `tidymodels` it is preferable to embrace consistency. Thus, we opted to make predicted probability consistent with predicted class all the time by making the predicted class a function of predicted probability (see [tidymodels/bonsai#78](https://github.com/tidymodels/bonsai/pull/78)).
 
 ## References
 
