Documents the instances where parsnip sets the default range of a tunable parameter via `set_model_arg()`. Also removes documentation for mars model earth engine that described non-implemented functionality for `num_terms`.

--- a/man/rmd/bart_dbarts.Rmd
+++ b/man/rmd/bart_dbarts.Rmd
@@ -25,6 +25,8 @@ This model has `r nrow(param)` tuning parameters:
 param$item
 ```
 
+Parsnip changes the default range for `trees` to `c(50, 500)`.
+
 ## Important engine-specific options
 
 Some relevant arguments that can be passed to `set_engine()`: 
