--- a/man/rmd/mlp_brulee.Rmd
+++ b/man/rmd/mlp_brulee.Rmd
@@ -33,6 +33,7 @@ Other engine arguments of interest:
  - `class_weights()`: Numeric class weights. See [brulee::brulee_mlp()].
  - `stop_iter()`: A non-negative integer for how many iterations with no improvement before stopping. (default: 5L).
 
+Parsnip changes the default range for `learn_rate` to `c(-2.5, -0.5)`.
 
 ## Translation from parsnip to the original package (regression)
 
