--- a/man/rmd/mlp_brulee_two_layer.Rmd
+++ b/man/rmd/mlp_brulee_two_layer.Rmd
@@ -55,7 +55,7 @@ mlp(
   learn_rate = double(1),
   activation = character(1)
 ) %>%
-  set_engine("brulee",
+  set_engine("brulee_two_layer",
              hidden_units_2 = integer(1),
              activation_2 = character(1)) %>% 
   set_mode("regression") %>% 
@@ -75,7 +75,7 @@ mlp(
   learn_rate = double(1),
   activation = character(1)
 ) %>% 
-  set_engine("brulee",
+  set_engine("brulee_two_layer",
              hidden_units_2 = integer(1),
              activation_2 = character(1)) %>% 
   set_mode("classification") %>% 
